# sistemas

./: Clase 30-04-25.txt  Recorrer una lista doblemente.txt
1ero/DDHH/: Documento sin título.docx  cuestiones de violencia  practicos 2024.docx
1ero/FunComp/FunComp/: Clase 4_ Aritmética binario y medidas de almacenamiento.pptx  Clase_ Escáner- Formatos Gráficos.pptx  Ejercicios practicos- UNIDAD TEMÁTICA 1.docx  Ejercicios prácticos- UNIDAD TEMÁTICA 2.docx  Rta. Unidad de Almacenamiento.doc  Sistemas Numéricos.pptx  UNIDAD TEMÁTICA 3_ MEMORIAS.docx  UNIDAD TEMÁTICA 5. SOFTWARE.docx  Unidad 4_ Periféricos.docx
1ero/SyO/: LAS PREGUNTAS MAS PERTURBADORADE SYO.docx  PREGUNTAS VARIAS - SyO(1).docx  PREGUNTAS VARIAS - SyO.docx
2do/AyED/: Bibliografía por tema  PARCIAL AyED
2do/AyED/PARCIALES/: PARCIAL AYED 23-24  PARCIAL AyED  PARCIAL AyED - Ejemplo  PARCIAL AyED - Ejemplo - 17-06  Parcial 2017 AyED  TEORIA AyED
2do/AyED/Practica/: CMakeLists.txt  LSE_doblemente_enlazada.cpp
2do/AyED/Practica/AyED-16-04/: CMakeLists.txt
2do/Discreta/: RESUMEN Mate Discreta.docx
2do/POO/Práctica/GUIA_2/: CMakeLists.txt  main.cpp
2do/POO/TP/: Integrantes  TP1 - POO - FORNARI - VLASIC  .docx
APUNTES/2- EDL/: Codigo_de_Referencia_Cola_Circular  Codigo_de_Referencia_EDL
APUNTES/3- Árboles/: Recorridos_Árboles_Pseudocódigo  Árboles_Binarios
FINALES/LyA/Bio/: Copia de cuarto cuestionario_.docx  Copia de df61f964-6fc1-4d58-9bf3-37c1e476ca5a.jfif
Practica/: LSE.cpp  colas.cpp  pilas.cpp
UADER Drives/1er Año/DDHH/: RESUMEN 1 - Qué es la teoría pura del derecho.docx
(+390 files in other folders)
