cmake_minimum_required(VERSION 3.16)

project(AyED-16-04 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(AyED-16-04 main.cpp)

include(GNUInstallDirs)
install(TARGETS AyED-16-04
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
